@@ -1,3 +1,9 @@
+[b][color=orange]v3.07[/color], 31.08.2017[/b][list]
+[*]Update install with new filterPriority.
+[*]Add the possibility to change the duration text on the Nameplate auras.
+[*]Fix errors with PlaySound API.
+[*]Increase the size of the Orderhall Commandbar.[/list]
+
 [b][color=orange]v3.06[/color], 29.08.2017[/b][list]
 [*]Implement OzCooldowns - Credits Infinitron
 [*]Add a new Logo. Thx RZ_Digital
